import "CounteragentGroups/DepartmentsInGroup.proto";

package Diadoc.Api.Proto.CounteragentGroups;

message CounteragentGroup
{
  required string CounteragentGroupId = 1;
  required string Name = 2;
  optional DepartmentsInGroup Departments = 3;
}